Fix LocationDetail hero button align

--- a/src/components/LocationDetailHero/LocationDetailHero.scss
+++ b/src/components/LocationDetailHero/LocationDetailHero.scss
@@ -45,8 +45,13 @@
     }
   }
 
-  &__button {
+  &__button-container {
     font-size: $font-2;
     letter-spacing: spacing(0.2);
+  }
+
+  &__button {
+    padding-top: calc(#{spacing(2)} + 0.0625rem);
+    padding-bottom: calc(#{spacing(2)} - 0.0625rem);
   }
 }
